handlebars displaying content

--- a/app/public/static/index.html
+++ b/app/public/static/index.html
@@ -12,16 +12,51 @@
 
 </head>
 <body>
+
+    <nav class="navbar navbar-light bg-light">
+            <a class="navbar-brand" href="#">Web Harvester</a>
+        <form class="form-inline float-right">
+            <button class="btn btn-outline-success" type="button">Scrape New Things</button>
+            <button class="btn btn-outline-secondary" type="button">Saved Articles</button>
+        </form>
+    </nav>
+
     <div class="container">
         <div class="row">
             <div class="col-6">
                 <div class="articles">
-
+                    <div class="article">
+                        <h4>Title</h4>
+                        <p>Teaser Text</p>
+                    </div>
+                    <div class="article">
+                        <h4>Title</h4>
+                        <p>Teaser Text</p>
+                    </div>
+                    <div class="article">
+                        <h4>Title</h4>
+                        <p>Teaser Text</p>
+                    </div>
+                    <div class="article">
+                        <h4>Title</h4>
+                        <p>Teaser Text</p>
+                    </div>
+                    <div class="article">
+                        <h4>Title</h4>
+                        <p>Teaser Text</p>
+                    </div>
+                    <div class="article">
+                        <h4>Title</h4>
+                        <p>Teaser Text</p>
+                    </div>
                 </div>      
             </div>
             <div class="col-6">
                 <div class="notes">
-
+                    <div class="note">
+                        <h4>Note Title</h4>
+                        <p>Note Text</p>
+                    </div>
                 </div>
             </div>
         </div>
